--- a/blogspot.html
+++ b/blogspot.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title> El titulo del post</title>
-        <link rel="stylesheet" herf="css/estilos.css">
+        <link rel="stylesheet" href="./css/estilos.css">
 
     </head>
 
