Commit al master del blogpost en su version mas reciente

--- a/blogspot.html
+++ b/blogspot.html
@@ -7,9 +7,12 @@
 
 
     <body>
-        <h1> Aquivamoa  hacer un blog spot</h1>
-        <p> y este es el parrafo de inicio</p>
-
+        <div id="container ">
+            <div id="post">
+                <h1> Aquivamoa  hacer un blog spotde cosas increibles</h1>
+                <p> y este es el parrafo de inicio nuevo genial</p>
+            </div>
+        </div>    
 
     </body>
 
