Estructura inicial de la cabecera

--- a/blogspot.html
+++ b/blogspot.html
@@ -8,6 +8,9 @@
 
     <body>
         <div id="container ">
+            <div id="cabecera">
+                cabecera
+            </div>
             <div id="post">
                 <h1> Aquivamoa  hacer un blog spotde cosas increibles</h1>
                 <p> y este es el parrafo de inicio nuevo genial</p>
