--- a/blogspot.html
+++ b/blogspot.html
@@ -9,7 +9,8 @@
     <body>
         <div id="container ">
             <div id="cabecera">
-                cabecera
+                Hyperblog
+                <span id="tagline">Tu blog de confianza</span>
             </div>
             <div id="post">
                 <h1> Aquivamoa  hacer un blog spotde cosas increibles</h1>
