Agregado el contenido adicional del blog y una mejor tipografia

--- a/blogspot.html
+++ b/blogspot.html
@@ -11,6 +11,7 @@
             <div id="post">
                 <h1> Aquivamoa  hacer un blog spotde cosas increibles</h1>
                 <p> y este es el parrafo de inicio nuevo genial</p>
+                <p> y este es el parrafo de inicio nuevo genial</p>
             </div>
         </div>    
 
