--- a/blogspot.html
+++ b/blogspot.html
@@ -10,12 +10,13 @@
         <div id="container ">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog maestro</span>
             </div>
             <div id="post">
                 <h1> Aquivamoa  hacer un blog spotde cosas increibles</h1>
                 <p> y este es el parrafo de inicio nuevo genial</p>
                 <p> y este es el parrafo de inicio nuevo genial</p>
+                <p> suscribet y dale like</p>
             </div>
         </div>    
 
