--- a/blogspot.html
+++ b/blogspot.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title> Bienvenido a blogspot</title>
+        <title> Bienvenido a blogspot 2.0</title>
         <link rel="stylesheet" href="./css/estilos.css">
 
     </head>
